--- a/style.css
+++ b/style.css
@@ -40,31 +40,31 @@ section {
   z-index: -1;
 
   &:nth-of-type(1) {
-    background-image: url("/images/1.jpg");
+    background-image: url("./images/1.jpg");
   }
   &:nth-of-type(2) {
-    background-image: url("/images/2.jpg");
+    background-image: url("./images/2.jpg");
   }
   &:nth-of-type(3) {
-    background-image: url("/images/3.jpg");
+    background-image: url("./images/3.jpg");
   }
   &:nth-of-type(4) {
-    background-image: url("/images/4.jpg");
+    background-image: url("./images/4.jpg");
   }
   &:nth-of-type(5) {
-    background-image: url("/images/5.jpg");
+    background-image: url("./images/5.jpg");
   }
   &:nth-of-type(6) {
-    background-image: url("/images/6.jpg");
+    background-image: url("./images/6.jpg");
   }
   &:nth-of-type(7) {
-    background-image: url("/images/7.jpg");
+    background-image: url("./images/7.jpg");
   }
   &:nth-of-type(8) {
-    background-image: url("/images/8.jpg");
+    background-image: url("./images/8.jpg");
   }
   &:nth-of-type(9) {
-    background-image: url("/images/9.jpg");
+    background-image: url("./images/9.jpg");
   }
 
   &:before {
